--- a/perfilUsuario.ejs
+++ b/perfilUsuario.ejs
@@ -13,7 +13,8 @@
     
     <script type="text/javascript" src="/javascript/prototype.js"></script>
 
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <style type="text/css">
         body {        
             font-family: "Arial";
@@ -89,139 +90,157 @@
 <title>Galileo</title>
 </head>
 <body>
-    
+
+<div class="container">
 <nav class="navbar navbar-default" role="navigation" style="background:#0B0B61">
   <div class="container-fluid">    
     <div class="navbar-header" >
-         <a class="navbar-brand" style="color:white;">GALILEO</a>
+        <a class="navbar-brand" style="color:white;">GALILEO</a>
+        <!-- <% if (inside == "1" ) { %> -->
+        <div class="navbar-center col-xs-12 col-sm-12 col-md-6">
+           <input type='image' id="musicAnterior" onclick="musicBack();" src="/img/back.png" width="33" height="33"/> 
+           <input type='image' id="musicSiguiente" onclick="musicNext();" src="/img/foward.png" width="33" height="33"/> 
+           <input type='image' id="musicPause" src="/img/pause.png" onclick="musicPause();" width="33" height="33"/> 
+           <input type='image' id="resumeMusic" onclick="musicResume();" src="/img/play.png" width="33" height="33"/> 
+        </div>
+        <!-- <% } %> -->
         <button type="button" class="navbar-toggle btn-primary" data-toggle="collapse"
             data-target=".navbar-ex1-collapse">
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-         <% if (inside == "1" ) { %>
-        <div class="navbar-center">
-           <input type='image' id="musicAnterior" onclick="musicBack();" src="/img/back.png" width="33" height="33"/> 
-           <input type='image' id="musicSiguiente" onclick="musicNext();" src="/img/foward.png" width="33" height="33"/> 
-           <input type='image' id="musicPause" src="/img/pause.png" onclick="musicPause();" width="33" height="33"/> 
-           <input type='image' id="resumeMusic" onclick="musicResume();" src="/img/play.png" width="33" height="33"/> 
-        </div>
-        <% } %>
     </div>
     <div class="collapse navbar-collapse navbar-ex1-collapse" > 
        <form class="navbar-form navbar-right" role="tag" method="post" name="cerrarSesion"  action="/cerrarSesion">
             <div class="form-group">
             </div>
             <button id="cerrarSesion" type="submit" class="btn btn-inverse">Cerrar sesión</button>    
-  		</form>
+      </form>
     </div>
   </div>
 </nav>
     
 <br>
 <br>   
-    
-    <div class="container">
-     <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xs-offset-0 col-sm-offset-0 col-md-offset-3 col-lg-offset-3 toppad">
-     <form class="form-horizontal" role="form" name="form1" method="post" action="/modPerfil" target="_self" data-toggle="validator">
-  <div class="panel panel-info">
-    <div class="panel-heading" style="background:#0B0B61">
+  <div class ="col-xs-12 col-sm-12 col-md-6 col-md-offset-3">
+    <div class="panel panel-default">
+      <div class="panel-heading" style="background:#0B0B61">
               <h3 class="panel-title" style="text-align: center;color:white;">Usuario Galileo</h3>
-    </div>
+      </div>
     <div class="panel-body">
-        <div class="row">                
-            <div class=".col-xs-12 .col-md-8 col-lg-12"> 
-                  <table class="table table-user-information">
-                    <tbody>
-                      <tr>
-                        <td>Nombre:</td>
-                        <td><input type="text" class="form-control" name="nom" placeholder="Juan" value="<%= userName %>" required="true"></td>
-                      </tr>
-                      <tr>
-                        <td>Apellido:</td>
-                        <td>
-<input type="text" class="form-control" name="ape" placeholder="Lopez" value="<%= userSurname %>" required="true">    </td>
-                      </tr>
-                      <tr>
-                        <td>DNI:</td>
-                        <td><input type="hidden" name="userDNI"  value="<%= userDNI %>"></input>
-                              <label type="text" name="dni" ><%= userDNI %></label></td>
-                      </tr> 
-                      <tr>
-                        <td>Email:</td>
-                        <td><input id ="email" type="email" class="form-control" name="email" value=<%= userEmail %> placeholder="email@dominio.com">
-                            <br>
-                            <label style="color:red"><%= errorMessageEmail %></label>
-                        </td>
-                      </tr> 
-                      <tr>
-                        <td>Contraseña:</td>
-                          <td><input id="pass" type="hidden" name="pass"  value="<%= userPass %>"></input>
-                              <label type="text" name="password" ><%= userPass %></label></td>
-                      </tr>     
-                      <tr>
-                        <td>Temperatura seleccionada:</td>
-                        <td>
-                         <input name ="temp" type="range" min="18" max="40" value=<%= userTemp %> step="1" onchange="showValueTemp(this.value)" />
-                            <span id="rangeTemp"><%= userTemp %></span>
-                            <script type="text/javascript">
-                            function showValueTemp(newValue)
-                            {
-                                document.getElementById("rangeTemp").innerHTML=newValue;
-                            }
-                            </script>
-                        </td>
-                      </tr>                                           
-                      <tr>
-                        <td>Intensidad de luz:</td>
-                        <td>
-                         <input name ="luz" type="range" min="0" max="100" value=<%= userLuz %> step="5" onchange="showValueLuz(this.value)" />
-                            <span id="rangeLuz"><%= userLuz %></span>
-                            <script type="text/javascript">
-                            function showValueLuz(newValue)
-                            {
-                                document.getElementById("rangeLuz").innerHTML=newValue;
-                            }
-                            </script>
-                        </td>                          
-                      </tr>    
-                        <tr>
-                            <td>Playlist 1:</td>
-                            <td>
-                                <!-- Trigger the modal with a button -->
-                        <input type="radio" name="playlist" value="<%= indexPlaylist0 %>" <%= checkCero %>>
-                        <a class="menu_link" data-toggle="modal" data-target="#myModal0" style="cursor: pointer; "><%= namePlaylist0 %></a>
-                            </td>
-                        </tr>
-      <tr>
-                            <td>Playlist 2:</td>
-                            <td>
-                                <!-- Trigger the modal with a button -->
-                        <input type="radio" name="playlist" value="<%= indexPlaylist1 %>" <%= checkUno %>>
-                        <a class="menu_link" data-toggle="modal" data-target="#myModal1" style="cursor: pointer; "><%= namePlaylist1 %></a>
-                            </td>
-                        </tr>
-      <tr>
-                            <td>Playlist 3:</td>
-                            <td>
-                                <!-- Trigger the modal with a button -->
-                        <input type="radio" name="playlist" value="<%= indexPlaylist2 %>" <%= checkDos %>>
-                        <a class="menu_link" data-toggle="modal" data-target="#myModal2" style="cursor: pointer; "><%= namePlaylist2 %></a>
-                            </td>
-                        </tr>
-                    </tbody>
-                  </table>
-            </div>
+      <form role="form" name="form1" method="post" action="/modPerfil" target="_self" data-toggle="validator">
+        <div class="row">
+          <div class="col-xs-3 col-sm-3 col-md-3">
+              <h4>Nombre:</h4>
+          </div>
+          <div class="col-xs-9 col-sm-9 col-md-9" >
+              <input type="text" class="form-control" name="nom" placeholder="Juan" value="<%= userName %>">
+          </div>
         </div>
-    </div>
-    <div class="panel-footer">
-        <button name="commandButton" type="submit" class="btn btn-default" value="modPerfil"  style="background:#0B0B61;color:white;width:100%; margin-left: -1px;">Modificar perfil</button>                        
-    </div>   
-  </div>
-</form>
-</div>
-    </div>  
+        <div class="row">
+          <div class="col-xs-3 col-sm-3 col-md-3">
+              <h4>Apellido:</h4>
+          </div>
+          <div class="col-xs-9 col-sm-9 col-md-9" >
+              <input type="text" class="form-control" name="ape" placeholder="Lopez" value="<%= userSurname %>">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-3 col-sm-3 col-md-3">
+              <h4>DNI:</h4>
+          </div>
+          <div class="col-xs-9 col-sm-9 col-md-9">
+              <h4><%= userDNI %></h4>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-3 col-sm-3 col-md-3">
+              <h4>Email:</h4>
+          </div>
+          <div class="col-xs-9 col-sm-9 col-md-9">
+              <input id ="email" type="email" class="form-control" name="email" value="<%= userEmail %>"placeholder="email@dominio.com">
+          </div>
+              <br>
+              <label style="color:red"><%= errorMessageEmail %></label>
+        </div>                
+        <div class="row">
+          <div class="col-xs-3 col-sm-3 col-md-3">
+              <h4>Contraseña:</h4>
+          </div>
+          <div class="col-xs-9 col-sm-9 col-md-9">
+              <h4 name="password"><%= userPass %></h4>
+          </div>
+          <input id="pass" type="hidden" name="pass"  value="<%= userPass %>"></input>
+        </div>    
+        <div class="row">
+          <div class="col-xs-3 col-sm-3 col-md-3">
+              <h4>Temperatura:</h4>
+          </div>
+          <div class="col-xs-9 col-sm-9 col-md-9">
+              <input name ="temp" type="range" min="18" max="40" value=<%= userTemp %> step="1" onchange="showValueTemp(this.value)" />
+              <span id="rangeTemp"><%= userTemp %></span>
+              <script type="text/javascript">
+              function showValueTemp(newValue)
+              {
+                  document.getElementById("rangeTemp").innerHTML=newValue;
+              }
+              </script>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-3 col-sm-3 col-md-3">
+              <h4>Intensidad de luz:</h4>
+          </div>
+          <div class="col-xs-9 col-sm-9 col-md-9">
+            <input name ="luz" type="range" min="0" max="100" value=<%= userLuz %> step="5" onchange="showValueLuz(this.value)" />
+                <span id="rangeLuz"><%= userLuz %></span>
+                <script type="text/javascript">
+                  function showValueLuz(newValue)
+                  {
+                      document.getElementById("rangeLuz").innerHTML=newValue;
+                  }
+                </script>
+          </div>
+        </div>     
+        <div class="row">
+          <div class="col-xs-3 col-sm-3 col-md-3">
+            <h4>Playlist 1:</h4>
+          </div>
+          <div class="col-xs-9 col-sm-9 col-md-9">
+              <input type="radio" name="playlist" value="<%= indexPlaylist0 %>" <%= checkCero %>
+              <a class="menu_link" data-toggle="modal" data-target="#myModal0" style="cursor: pointer; "><%= namePlaylist0 %></a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-3 col-sm-3 col-md-3">
+            <h4>Playlist 2:</h4>
+          </div>
+          <div class="col-xs-9 col-sm-9 col-md-9">
+              <input type="radio" name="playlist" value="<%= indexPlaylist1 %>" <%= checkUno %>
+              <a class="menu_link" data-toggle="modal" data-target="#myModal1" style="cursor: pointer; "><%= namePlaylist1 %></a>
+          </div>
+        </div>       
+        <div class="row">
+           <div class="col-xs-3 col-sm-3 col-md-3">
+            <h4>Playlist 3:</h4>
+          </div>
+          <div class="col-xs-9 col-sm-9 col-md-9">
+              <input type="radio" name="playlist" value="<%= indexPlaylist2 %>" <%= checkDos %>
+              <a class="menu_link" data-toggle="modal" data-target="#myModal2" style="cursor: pointer; "><%= namePlaylist2 %></a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-12 col-sm-12 col-md-12" >
+              <button name="commandButton" type="submit" class="btn btn-default" value="modPerfil"  style="background:#0B0B61;color:white;width:100%; margin-left: -1px;">Modificar perfil</button>
+          </div>
+        </div>             
+    </form>
+  </div> <!-- div del panel body -->
+</div> <!-- div del col -->
+</div> <!-- div del panel -->
+
+
 <!-- Modal -->
 <div class="modal fade" id="myModal0" role="dialog">
     <div class="modal-dialog">
